--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -654,10 +654,31 @@ ru:
     mobile_filter: "Результаты фильтровать"
     more_filter_options: "Показать больше фильтров"
     query_field:
-      example_placeholder: "Например %{word}, …"
+      example_placeholder: "Например %{word}"
       placeholder_words:
-        family: '["наркотики", "насилие", "помощь", "экстренный случай", "право", "безработный", "проблемы воспитания", "нарушения приема пищи", "бездомный", "семейные проблемы", "беременная", "ссора", "жить"]'
-        refugees: '["гражданство", "курс немецкого", "подтверждение", "военная травма", "заявление на временное убежище", "медицинское обслуживание", "ведомства", "право жительства"]'
+        family:
+        - "наркотики"
+        - "насилие"
+        - "помощь"
+        - "экстренный случай"
+        - "право"
+        - "безработный"
+        - "проблемы воспитания"
+        - "нарушения приема пищи"
+        - "бездомный"
+        - "семейные проблемы"
+        - "беременная"
+        - "ссора"
+        - "жить"
+        refugees:
+        - "гражданство"
+        - "курс немецкого"
+        - "подтверждение"
+        - "военная травма"
+        - "заявление на временное убежище"
+        - "медицинское обслуживание"
+        - "ведомства"
+        - "право жительства"
     routes:
       faq: "Частые вопросы"
     search:
@@ -814,10 +835,10 @@ ru:
           de: Deutsch
           en: English
           fr: Français
-          pl: Polskie
+          pl: Polski
           ru: "Русский"
           tr: Türkçe
-        title: "Выбери свой язык"
+        title: 
       navigation:
         category_headline: "Или поиск по категориям"
         claim:
