--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -676,10 +676,10 @@ ar:
           de: Deutsch
           en: English
           fr: Français
-          pl: Polskie
-          ru: "НА РУССКОМ"
+          pl: Polski
+          ru: "Русский"
           tr: Türkçe
-        title: "إختيار اللغة"
+        title: 
       navigation:
         category_headline: "أو البحث عن طريق التصنيف"
         claim:
