--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -547,12 +547,31 @@ tr:
     mobile_filter: Sonuçları filtrele
     more_filter_options: Daha fazla filtre göster
     query_field:
-      example_placeholder: "örneğin %{word}, …"
+      example_placeholder: "örneğin %{word}"
       placeholder_words:
-        family: |-
-          [''Uyuşturucu'', ''Şiddet'', ''Özel ders'', ''Acil durum'', ''hak'', ''işsiz'', ''eğitim sorunları'', ''yeme bozukluğu'', ''evsiz''
-          ''aile sorunları'', ''hamile'', ''kavga'', ''ikamet ederim'']
-        refugees: "[''Uyruk'', ''Almanca kursu'', ''kabul'', ''savaş travması'', ''iltica işlemleri'', ''sağlık'', ''resmi daireler'', ''ikametgah'']"
+        family:
+        - Uyuşturucu
+        - "Şiddet"
+        - "Özel ders"
+        - Acil durum
+        - hak
+        - işsiz
+        - eğitim sorunları
+        - yeme bozukluğu
+        - evsiz
+        - aile sorunları
+        - hamile
+        - kavga
+        - ikamet ederim
+        refugees:
+        - Uyruk
+        - Almanca kursu
+        - kabul
+        - savaş travması
+        - iltica işlemleri
+        - sağlık
+        - resmi daireler
+        - ikametgah
     routes:
       faq: Sıkça sorulan sorular
     search:
@@ -709,10 +728,10 @@ tr:
           de: Deutsch
           en: English
           fr: Français
-          pl: Polskie
-          ru: "НА РУССКОМ"
+          pl: Polski
+          ru: "Русский"
           tr: Türkçe
-        title: Dilini seç
+        title: 
       navigation:
         category_headline: Kategoriler arasında ara
         claim:
