--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -942,7 +942,7 @@ en:
     mobile_filter: Filter results
     more_filter_options: Show more filters
     query_field:
-      example_placeholder: e.g. %{word}, …
+      example_placeholder: e.g. %{word}
       placeholder_words:
         family:
         - adoption
@@ -1125,8 +1125,8 @@ en:
           de: Deutsch
           en: English
           fr: Français
-          pl: Polszczyzna
-          ru: "НА РУССКОМ"
+          pl: Polski
+          ru: "Русский"
           tr: Türkçe
         title: Automated translations!
       navigation:
@@ -1492,7 +1492,7 @@ en:
         Here you can search for offers of help via the icons.
       heading: Unfortunately we could not find that page.
       link_text: here
-      title: 404
+      title: "'404'"
     privacy:
       chapter_eight:
         heading: 8. Recht auf Widerspruch und Ansprechpartner
