--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1190,7 +1190,7 @@ de:
           pl: Polski
           ru: "Русский"
           tr: Türkçe
-        title: Automatische Übersetzungen!
+        title: Wähle deine Sprache
       navigation:
         category_headline: Oder suche nach Kategorien
         claim:
