--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -980,40 +980,30 @@ pl:
         Opiekuje się całym zespołem i organizuje wszystko. Jej ulubionym utworem jest: “Denken Sie Groß” formacji Deichkind.
       astrid: "Jest politologiem. To znaczy, że wie dużo o polityce i społeczeństwie. Ma zawsze dobry humor i zaraża nim wszystkich. W \nclarat jest w zespole badawczym. Jej ulubiony utwór to: ”You Got Me” zespołu The Roots feat. Erykah Badu."
       basti: 'Jest web developerem.To znaczy, że potrafi dobrze programować strony internetowe. W clarat jest kierownikiem zespołu IT. Pomaga przy zadaniach technicznych oraz zajmuje się sprawami urlopowymi i umowami. Jego ulubionym utworem jest: “Man in The Mirror” Michaela Jacksona.'
-      bettina: |-
-        Bettina studiowała zarządzanie non-profit.
-        To znaczy, że wie jak zorganizować pomoc. Potrafi tez świetnie wszystko uporządkować. W clarat jest w zespole badawczym i zajmuje się wyszukiwaniem organizacji w internecie. Jej ulubionym utworem jest “Elias” grupy Dispatch.
-      elisa: Jest kulturoznawcą. To znaczy, ze wie dużo o kulturze. Potrafi tez łatwo wytłumaczyć skomplikowane rzeczy. W clarat jest w zespole badawczym. Zajmuje się również leksykonem i użytkownikami. Jej ulubiony utwór to “Boat Behind” zespołu Kings of Convenience.
-      franziska: Jest ekspertem prawa międzynarodowego.To znaczy, ze wie dużo o prawie, które obowiązuje we wszystkich krajach. Potrafi zrozumieć skomplikowane rzeczy, i znaleźć szybko rozwiązanie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Explanations” Selah Sue.
+      bettina: Bettina studiowała zarządzanie non-profit. To znaczy, że wie, jak zorganizować pomoc. Potrafi też świetnie wszystko uporządkować. W clarat jest w zespole badawczym i zajmuje się wyszukiwaniem organizacji w internecie. Jej ulubionym utworem jest “Elias” grupy Dispatch.
+      elisa: Jest kulturoznawcą. To znaczy, że wie dużo o kulturze. Potrafi też łatwo wytłumaczyć skomplikowane rzeczy. W clarat jest w zespole badawczym. Zajmuje się również leksykonem i użytkownikami. Jej ulubiony utwór to “Boat Behind” zespołu Kings of Convenience.
+      franziska: Jest ekspertem prawa międzynarodowego.To znaczy, że wie dużo o prawie, które obowiązuje we wszystkich krajach. Potrafi zrozumieć skomplikowane rzeczy i znaleźć szybko rozwiązanie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Explanations” Selah Sue.
       heading: Kto się kryje za claratem?
-      janina: |-
-        Jest antropologiem kulturowym. To znaczy, ze wie dużo o ludziach i kulturach.
-        Potrafi dobrze pisać.W clarat jest w zespole badawczym. Jest ekspertem językowym claratu i pomaga naszym użytkownikom. Jej ulubiony utwór to “MFG” Fanty4.
-      janne: Janne studiowała Politykę i Stosunki Międzynarodowe. Potrafi świetnie zagospodorowć swój czas. W clarat jest w zespole badawczym. Ona decyduje jakie oferty przynależą do claratu. Jej ulubiony utwór to “Sweat” Ry X.
+      janina: Jest antropologiem kulturowym. To znaczy, że wie dużo o ludziach i kulturach. Potrafi dobrze pisać. W clarat jest w zespole badawczym. Jest ekspertem językowym claratu i pomaga naszym użytkownikom. Jej ulubiony utwór to “MFG” Fanty4.
+      janne: Janne studiowała Politykę i Stosunki Międzynarodowe. Potrafi świetnie gospodarować swoim czasem. W clarat jest w zespole badawczym. Ona decyduje, jakie oferty przynależą do claratu. Jej ulubiony utwór to “Sweat” Ry X.
       jens: Jest pedagogiem. To znaczy, że zna się na wykształceniu. Szybko pojmuje skomplikowane rzeczy. W clarat jet w zespole badawczym i decyduje jakie oferty wybierze clarat. Jego ulubionym utworem jest “2B2” zespolu Lambchop.
       jule: Jest badaczem pokojowego rozwiązywania konfliktów. Wie dużo o konfliktach i wojnach. Potrafi dobrze znajdować rozwiązania. W clarat jest w zespole badawczym. Zabezpiecza jakość naszej pracy. Jej ulubiony utwór to “Home” Edwarda Sharpe.
-      julia: Jest germanistką. To znaczy, ze zna się dobrze na tekstach i na języku niemieckim. Potrafi dobrze pisać i łatwo wyjaśniać zagadnienia. W clarat jest w zespole badawczym. Jest też ekspertem językowym claratu. Jej ulubiony utwór to “Reckoner” Radiohead.
-      julian: Jest ekonomem społecznym. To znaczy, ze wie dużo o gospodarce i społeczeństwie. Zna się też dobrze na komputerach. W clarat jest w zespole badawczym oraz zajmuje się sprawami technicznymi. Jego ulubiony utwór to “All You Need” Sublime.
+      julia: Jest germanistką. To znaczy, że zna się dobrze na tekstach i na języku niemieckim. Potrafi dobrze pisać i łatwo wyjaśniać zagadnienia. W clarat jest w zespole badawczym. Jest też ekspertem językowym claratu. Jej ulubiony utwór to “Reckoner” Radiohead.
+      julian: Jest ekonomem społecznym. To znaczy, że wie dużo o gospodarce i społeczeństwie. Zna się też dobrze na komputerach. W clarat jest w zespole badawczym oraz zajmuje się sprawami technicznymi. Jego ulubiony utwór to “All You Need” Sublime.
       katinka: |-
         Jest psychologiem. To znaczy, że zna się na zachowaniach i uczuciach ludzi. Potrafi uporządkować skomplikowane sprawy.
         W clarat jest w zespole badawczym. Jej ulubiony utwór to “Greatest” Cat Power.
-      konstantin: Jest web developerem. To znaczy, ze potrafi dobrze programować strony internetowe. Zawsze znajduje dobre rozwiązania. W clarat jest w zespole IT i tworzy naszą stronę internetową. Jego ulubionym utworem jest “Too Long” Daft Punk.
+      konstantin: Jest web developerem. To znaczy, że potrafi dobrze programować strony internetowe. Zawsze znajduje dobre rozwiązania. W clarat jest w zespole IT i tworzy naszą stronę internetową. Jego ulubionym utworem jest “Too Long” Daft Punk.
       laura: Studiowała Nauki o Azji Południowej i Geografię Rozwoju Regionalnego. To znaczy, że zna się na krajach rozwijających się. Zawsze ma dobre rozeznanie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Paint in Black” Rolling Stones.
-      lavinia: |-
-        Jest badaczem stosunków pokojowych.
-        Wie dużo o konfliktach i wojnie. Potrafi dobrze przekonywać innych.
-        W clarat jest w zespole badawczym i porządkuje tematycznie oferty. Jej ulubionym utworem  jest “I´m Not Done” Fever Ray.
+      lavinia: Jest badaczem stosunków pokojowych. Wie dużo o konfliktach i wojnie. Potrafi dobrze przekonywać innych. W clarat jest w zespole badawczym i porządkuje tematycznie oferty. Jej ulubionym utworem  jest “I´m Not Done” Fever Ray.
       line: Jest reżyserką teatralną. Zna się dobrze na literaturze i języku. Dlatego wie jak słowa działają na ludzi. Jej ulubiony utwór to “Anybody Seen My Baby”  Rolling Stones.
       lisa: Jest technikiem designu. To znaczy, że potrafi kreatywnie rozplanować projekty. W clarat zajmuje się planowaniem i użytkownikami. Jej ulubionym utworem jest “Another Day” Jamie Lidell.
       marcus: Jest webdesignerem. To znaczy, że potrafi programować szatę graficzną stron internetowych. Potrafi też dobrze planować. W clarat jest w zespole IT. Dba o to, aby nasza strona internetowa dobrze wyglądała. Jego ulubionym utworem jest “Hysteria” zespolu Muse.
       nicole: Studiowała komunikację międzykulturową. To znaczy, że wie dużo o kulturze i językach. Potrafi dobrze podejmować decyzje. Jest kierowniczką zespołu badawczego. Jej ulubiony utwór to “Palabra Mi Amor” Shaka Ponk.
       nils: Jest informatykiem. To znaczy, że potrafi dobrze programować strony internetowe i programy komputerowe. Szybko znajduje dobre rozwiązania i szybko się uczy. W clarat jest w zespole IT. Jego ulubiony utwór to “Jein” grupy Fettes Brot.
-      stefan: |-
-        Jest kulturoznawcą. To znaczy, że wie dużo o kulturze i społeczeństwie. Potrafi
-        świetnie przekonywać ludzi do dobrej sprawy. On jest pomysłodawcą claratu.
-        Jego ulubionym utworem jest “Riders On The Storm” The Doors.
-      text: "clarat jest projektem stowarzyszenia użytecznosci publicznej, Stowarzyszenia Benckiser- Przyszłość (www.benckiser-stiftung.org). Przez stowarzyszenie Benckiser promujemy od wielu lat skuteczne projekty rozwojowe dla dzieci i młodzieży. Dlatego zauważyliśmy: Jak trudno jest rozeznać się w istniejących już ofertach pomocy. Ale jedno stało się jasne: Skoro nam “ekspertom” nie jest łatwo się w tym rozeznać, to jak trudne musi to być dla dzieci, młodzieży czy rodzin, które potrzebują pomocy? Albo dla uchodźców, którzy tutaj w Niemczech nie maja jeszcze jakiegokolwiek rozeznania? \nOdpowiedz jest prosta: Bardzo trudno! I stąd zrodził się pomysł na clarat: proste znalezienie pomocy. Dla rodzin: na stronie clarat family. A dla uchodźców: na clarat refugee."
-      tine: Jest pedagogiem socjalnym. Potrafi dobrze wsłuchać się w ludzi. Jest również pisarką. To znaczy, że dobrze posługuje się językiem i pisze ładne historie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Survive It “ Ghostpoet.
+      stefan: Jest kulturoznawcą. To znaczy, że wie dużo o kulturze i społeczeństwie. Potrafi świetnie przekonywać ludzi do dobrej sprawy. On jest pomysłodawcą claratu. Jego ulubionym utworem jest “Riders On The Storm” The Doors.
+      text: "clarat jest projektem stowarzyszenia użytecznosci publicznej, Stowarzyszenia Benckiser-Przyszłość (www.benckiser-stiftung.org). Przez stowarzyszenie Benckiser promujemy od wielu lat skuteczne projekty rozwojowe dla dzieci i młodzieży. Dlatego zauważyliśmy: Jak trudno jest rozeznać się w istniejących już ofertach pomocy. Ale jedno stało się jasne: Skoro nam “ekspertom” nie jest łatwo się w tym rozeznać, to jak trudne musi to być dla dzieci, młodzieży czy rodzin, które potrzebują pomocy? Albo dla uchodźców, którzy tutaj w Niemczech nie maja jeszcze jakiegokolwiek rozeznania? \nOdpowiedz jest prosta: Bardzo trudno! I stąd zrodził się pomysł na clarat: proste znalezienie pomocy. Dla rodzin: na stronie clarat family. A dla uchodźców: na clarat refugee."
+      tine: Jest pedagogiem socjalnym. Potrafi dobrze wsłuchać się w ludzi. Jest również pisarką. To znaczy, że dobrze posługuje się językiem i pisze ładne historie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Survive It“ Ghostpoet.
       title: " O nas"
       verena: Jest politologiem. To znaczy, że wie dużo o polityce i społeczeństwie. Potrafi bardzo dobrze zbierać informacje. W clarat jest w zespole badawczym i zajmuje się leksykonem. Jej ulubionym utworem jest “Lose It” Oh Wonder.
     agb:
@@ -1065,20 +1055,20 @@ pl:
         </p>
       title: Nota prawna
     faq:
-      title: Najczęściej zadawane pytania
+      title: Często zadawane pytania
     home:
       how:
         heading: Jak funkcjonuje clarat?
-        text: Wpisz jaki masz problem. Albo co przysparza Ci zmartwień. Lub wybierz z tematów przez nas zaproponowanych. Zaraz wyświetlą się oferty pomocy w twojej okolicy. My wskażemy Ci również, w jaki sposób uzyskasz pomoc. Czyli, czy masz zadzwonić, napisać e-mail, czy udać się na wskazane miejsce.
+        text: Wpisz, jaki masz problem. Albo co przysparza Ci zmartwień. Lub wybierz z tematów przez nas zaproponowanych. Zaraz wyświetlą się oferty pomocy w twojej okolicy. My wskażemy Ci również, w jaki sposób uzyskasz pomoc. Czyli, czy masz zadzwonić, napisać e-mail, czy udać się we wskazane miejsce.
       title:
         family: Oferty wsparcia dla dzieci, młodzieży i rodzin
         refugees: Oferty wsparcia dla uchodźców
       whom:
         heading: Dla kogo jest clarat?
-        text: clarat jest dostępny dla wszystkich. clarat family dla dzieci, mlodzieży i ich rodzin. clarat refugees dla uchodźców. Tutaj znajdziesz wsparcie w pytaniach i problemach. Dla Ciebie, Twojej rodziny i twoich przyjaciół. Ale również dla innych osób, które znasz i które potrzebują pomocy.
+        text: clarat jest dostępny dla wszystkich. clarat family dla dzieci, młodzieży i ich rodzin. clarat refugees dla uchodźców. Tutaj znajdziesz wsparcie w pytaniach i problemach. Dla Ciebie, Twojej rodziny i twoich przyjaciół. Ale również dla innych osób, które znasz i które potrzebują pomocy.
       why:
         heading: Dlaczego istnieje clarat?
-        text: Z clarat można łatwo znaleźć pomoc. W Niemczech jest bardzo dużo ofert wspomagających dzieci, młodzież i rodziny. Również wiele ofert dla uchodźców. Często są one trudne do znalezienia. My pomożemy Ci w tym. Jeżeli chodzi o zagadnienia rodzinne, szukaj w clarat family. Jeśli o sprawy uchodźców, szukaj w clarat refugees.
+        text: Z clarat można łatwo znaleźć pomoc. W Niemczech jest bardzo dużo ofert wspomagających dzieci, młodzież i rodziny. Również wiele ofert dla uchodźców. Często są one trudne do znalezienia. My Ci w tym pomożemy. Jeżeli chodzi o zagadnienia rodzinne, szukaj w clarat family. Jeśli o sprawy uchodźców, szukaj w clarat refugees.
     impressum:
       heading: Impressum
       responsible_html: |
@@ -1090,7 +1080,7 @@ pl:
       description: |-
         Wpisz w polu wyszukiwania, jakiej pomocy szukasz. Albo jaki jest Twój problem. clarat wskaże Ci oferty w Twojej okolicy.
         Lub przejdź na %{start_page} stronę startową. Tam możesz wyszukać odpowiednią pomoc klikając na obrazki.
-      heading: Niestety strona nie mogliśmy odnaleźć tej strony.
+      heading: Niestety nie mogliśmy odnaleźć tej strony.
       link_text: tu
       title: "'404'"
     privacy:
