clarat-org/clarat#744 - extended caching for stamp to section and locale

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1552,7 +1552,7 @@ de:
         Bilder nach passender Hilfe suchen.
       heading: Leider konnten wir diese Seite nicht finden.
       link_text: hier
-      title: "'404'"
+      title: 404
     privacy:
       chapter_eight:
         heading: 8. Recht auf Widerspruch und Ansprechpartner
