--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1492,7 +1492,7 @@ en:
         Here you can search for offers of help via the icons.
       heading: Unfortunately we could not find that page.
       link_text: here
-      title: "'404'"
+      title: 404
     privacy:
       chapter_eight:
         heading: 8. Recht auf Widerspruch und Ansprechpartner
