--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1008,7 +1008,7 @@ fr:
         Bilder nach passender Hilfe suchen.
       heading: Leider konnten wir diese Seite nicht finden.
       link_text: Ici
-      title: "'404'"
+      title: 404
     privacy:
       chapter_eight:
         heading: 8. Recht auf Widerspruch und Ansprechpartner
