--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1023,7 +1023,7 @@ ar:
       description: "اكتب فقط في خانة-بحث ما هي المساعدة التي تبحث عنها أو ما هي مشكلتك.\nوسوف تعرض لك كلارات عروض المساعدة التي بالقرب منك. \nأو اذهب إلى %{start_page} على الصفحة الرئيسية.\nهناك يمكنك عن طريق الصور الدائرية أن تبحث عن المساعدة المناسبة. "
       heading: "للأسف لم نتمكن من العثور على هذه الصفحة"
       link_text: here
-      title: "'404'"
+      title: 404
     privacy:
       chapter_eight:
         heading: 8. Recht auf Widerspruch und Ansprechpartner
